# os

./: .gitignore  README.md  asm_entry_main.asm  boot.asm  boot1.asm  boot2.asm  char.asm  cpp_main.cpp  entry.asm  kernel.cpp  kernel_asm_main.asm  kernel_entry.asm  make-run.sh  make.sh  zeroes.asm
md/: memory_map.md
md/.obsidian/: workspace.json
scripts/: make-run-debug.sh  make-run-mac.sh  make-run.sh  make.sh  setup-gcc-MacOS.sh
trash/: CAString.cpp  CAString.h  CMakeLists.txt  kernal-backup-1.cpp  save_for_later....cpp
trash/asm/: DIY.asm
trash/asm/assembly/: CsFunc.asm  CsFunc.h  GroupEffort_CsFunc_plus_PossessiveC  PossessiveC.c  arson  arson.asm  build-instructions.txt  call_func  call_func.asm  call_func_better  call_func_better.asm  conditional_jmp  conditional_jmp.asm  deep_fun2.asm  deep_func1  deep_func1.asm  deep_func2  ex3  ex3.asm  loop  loop.asm  memory  memory.asm  stack_memory  stack_memory.asm
trash/asm/c/: cstart.c
trash/asm/os/learn/: build-i.txt  readchar.asm  readchar_notmine.asm  workingfile.asm
trash/c/: 1.c  a.out
trash/gpt/: bootloader.asm  build.sh
trash/learn/daedalus_vids/: .diskshit.asm.swp  QUICKSTART.txt  bob.txt  bobo.txt  diskshit.asm  diskshit2.asm  diskshit3.asm  getreal.asm  readshit.asm  stackshit.asm  stringshit.asm  test.asm
trash/learn/trial1/: exeafter.asm
trash/learn/trial2/: .boot.asm.swp  .kernel_entry.asm.swp  boot.asm  kernel.cpp  kernel_entry.asm  make-run.sh  make.sh  qemu.sh  untitled.cpp  zeroes.asm
